--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,71 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="@drawable/background">
+
+    <ImageView
+        android:id="@+id/image_logo"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="72dp"
+        android:src="@drawable/logo1_new" />
 
     <EditText
         android:id="@+id/et_name"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="250dp"
-        android:layout_marginEnd="10dp"
-        android:autofillHints=""
-        android:hint="@string/name"
-        android:inputType="text"
-        android:maxLines="1"
-        android:textColor="#00FF00"
-        android:textSize="29sp"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/image_logo"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="48dp"
+        android:background="@drawable/edit_text_bg"
+        android:drawableLeft="@drawable/ic_person"
+        android:drawablePadding="16dp"
+        android:hint="Username"
+        android:padding="16dp"
+        android:textColor="@color/dark_gray"
+        android:textColorHint="@color/light_gray" />
 
     <EditText
         android:id="@+id/et_password"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="10dp"
-        android:autofillHints=""
-        android:hint="@string/password"
-        android:inputType="textPassword"
-        android:maxLines="1"
-        android:textColor="#00FF00"
-        android:textSize="29sp"
-        app:layout_constraintTop_toBottomOf="@id/et_name" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/et_password"
-        android:orientation="horizontal">
+        android:layout_below="@id/et_name"
+        android:layout_marginHorizontal="24dp"
+        android:background="@drawable/edit_text_bg"
+        android:drawableLeft="@drawable/ic_lock"
+        android:drawablePadding="16dp"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:padding="16dp"
+        android:textColor="@color/dark_gray"
+        android:textColorHint="@color/light_gray" />
 
-        <Button
-            android:id="@+id/btn_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="20dp"
-            android:text="@string/log_in"
-            android:textAllCaps="false"
-            android:textSize="17sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:id="@+id/btn_login"
+        android:layout_width="142dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/et_password"
+        android:layout_alignParentStart="true"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginStart="49dp"
+        android:layout_marginTop="52dp"
+        android:background="@drawable/button_bg"
+        android:text="Log in"
+        android:textColor="@color/white" />
 
-        <Button
-            android:id="@+id/btn_register_fw"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="144dp"
-            android:layout_marginTop="20dp"
-            android:text="@string/register"
-            android:textAllCaps="false"
-            android:textSize="17sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/btn_register_fw"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/et_password"
+        android:layout_alignParentEnd="true"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="49dp"
+        android:background="@drawable/button_bg"
+        android:text="Register"
+        android:textColor="@color/white" />
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
