--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,118 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity">
+    android:background="@drawable/background">
+
+    <ImageView
+        android:id="@+id/image_logo"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="72dp"
+        android:textAlignment="center"
+        android:src="@drawable/logo1_new" />
+
 
     <TextView
         android:id="@+id/text_view_1"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="跳转页面（登录成功/注册）"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="center"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="229dp"
+        android:layout_marginEnd="76dp"
+        android:gravity="center"
+        android:text="跳转页面(登录成功/注册)"
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/et_name"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="150dp"
-        android:layout_marginEnd="10dp"
-        android:autofillHints=""
-        android:hint="@string/name"
-        android:inputType="text"
-        android:maxLines="1"
-        android:textSize="29sp"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/image_logo"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="48dp"
+        android:background="@drawable/edit_text_bg"
+        android:drawableLeft="@drawable/ic_person"
+        android:drawablePadding="16dp"
+        android:hint="Username"
+        android:padding="16dp"
+        android:textColor="@color/dark_gray"
+        android:textColorHint="@color/light_gray" />
 
     <EditText
         android:id="@+id/et_password"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="10dp"
-        android:autofillHints=""
-        android:hint="@string/password"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/et_name"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="-1dp"
+        android:background="@drawable/edit_text_bg"
+        android:drawableLeft="@drawable/ic_lock"
+        android:drawablePadding="16dp"
+        android:hint="Password"
         android:inputType="textPassword"
-        android:maxLines="1"
-        android:textSize="29sp"
-        app:layout_constraintTop_toBottomOf="@id/et_name" />
+        android:padding="16dp"
+        android:textColor="@color/dark_gray"
+        android:textColorHint="@color/light_gray" />
 
     <EditText
         android:id="@+id/et_phone"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:autofillHints=""
-        android:hint="phone"
-        android:inputType="phone"
-        android:maxLines="1"
-        android:textSize="29sp"
-        app:layout_constraintTop_toBottomOf="@id/et_password" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/et_name"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="55dp"
+        android:background="@drawable/edit_text_bg"
+        android:drawableLeft="@drawable/ic_phone"
+        android:drawablePadding="16dp"
+        android:hint="Phone"
+        android:inputType="textPassword"
+        android:padding="16dp"
+        android:textColor="@color/dark_gray"
+        android:textColorHint="@color/light_gray" />
+
+    <Button
+        android:id="@+id/btn_register"
+        android:layout_width="142dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/et_password"
+        android:layout_alignParentStart="true"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginStart="54dp"
+        android:layout_marginTop="132dp"
+        android:background="@drawable/button_bg"
+        android:text="Register"
+        android:textColor="@color/white" />
+
+    <Button
+        android:id="@+id/btn_return"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/et_password"
+        android:layout_alignParentEnd="true"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="132dp"
+        android:layout_marginEnd="49dp"
+        android:background="@drawable/button_bg"
+        android:text="return"
+        android:textColor="@color/white" />
 
     <RadioGroup
         android:id="@+id/rdg_1"
-        android:layout_width="match_parent"
+        android:layout_width="268dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_phone">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="105dp"
+        android:layout_marginEnd="105dp"
+        android:layout_marginBottom="240dp"
+        android:orientation="horizontal">
 
         <RadioButton
             android:id="@+id/rbtn_1"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="@string/user"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rdg_1" />
+            android:gravity="center"
+            android:text="Customer" />
 
         <RadioButton
             android:id="@+id/rbtn_2"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/admin"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rdg_1" />
+            android:gravity="center"
+            android:text="Admin" />
+
     </RadioGroup>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/rdg_1"
-        android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btn_register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="84dp"
-            android:layout_marginTop="16dp"
-            android:text="@string/register"
-            android:textAllCaps="false"
-            android:textSize="17sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/btn_return"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="224dp"
-            android:layout_marginTop="16dp"
-            android:text="return"
-            android:textAllCaps="false"
-            android:textSize="17sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
