--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -64,11 +64,11 @@
         android:id="@+id/et_phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/et_name"
+        android:layout_below="@id/et_password"
         android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="-1dp"
         android:background="@drawable/edit_text_bg"
-        android:drawableLeft="@drawable/ic_phone"
+        android:drawableLeft="@drawable/ic_lock"
         android:drawablePadding="16dp"
         android:hint="Phone"
         android:inputType="textPassword"
@@ -106,12 +106,12 @@
         android:id="@+id/rdg_1"
         android:layout_width="268dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/et_password"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="105dp"
+        android:layout_marginTop="75dp"
         android:layout_marginEnd="105dp"
-        android:layout_marginBottom="240dp"
         android:orientation="horizontal">
 
         <RadioButton
