--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -68,7 +68,7 @@
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="-1dp"
         android:background="@drawable/edit_text_bg"
-        android:drawableLeft="@drawable/ic_lock"
+        android:drawableLeft="@drawable/ic_phone"
         android:drawablePadding="16dp"
         android:hint="Phone"
         android:inputType="textPassword"
