--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -99,14 +99,24 @@
 
 
     <ListView
-
         android:id="@+id/listview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="310dp"
+        android:layout_height="344dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="500dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="40dp"
+
+        android:layout_marginEnd="40dp"
+        android:layout_marginTop="497dp"
         android:layout_marginBottom="50dp"
-        tools:itemCount="3" />
+        <!--
+        tools:itemCount="4"
+        tools:listheader="@layout/view_header"
+        tools:listitem="@layout/list_item"
+        -->
+
+        />
 
 
 </RelativeLayout>
