--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -32,13 +32,14 @@
         android:layout_below="@+id/mEtStoreSearch"
         android:background="@drawable/edit_text_bg"
         android:drawablePadding="16dp"
-        android:hint="Time"
+        android:hint="YY/MM/DD/Hour"
         android:drawableLeft="@drawable/ic_time"
         android:imeOptions="actionSearch"
         android:padding="16dp"
         android:singleLine="true"
         android:textColor="@color/dark_gray"
-        android:textColorHint="@color/light_gray" />
+        android:textColorHint="@color/light_gray"
+        android:inputType="datetime"/>
 
     <Button
         android:id="@+id/btn_usersearch"
