--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -7,7 +7,7 @@
 
     <EditText
         android:id="@+id/mEtStoreSearch"
-        android:layout_width="238dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="48dp"
@@ -24,7 +24,7 @@
 
     <EditText
         android:id="@+id/mEtTime"
-        android:layout_width="238dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="1dp"
@@ -32,33 +32,46 @@
         android:layout_below="@+id/mEtStoreSearch"
         android:background="@drawable/edit_text_bg"
         android:drawablePadding="16dp"
-        android:hint="Time"
+        android:hint="YY/MM/DD/24Hour"
         android:drawableLeft="@drawable/ic_time"
         android:imeOptions="actionSearch"
         android:padding="16dp"
         android:singleLine="true"
         android:textColor="@color/dark_gray"
-        android:textColorHint="@color/light_gray" />
+        android:textColorHint="@color/light_gray"
+        android:inputType="datetime"
+        />
 
     <Button
         android:id="@+id/btn_usersearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/mEtTime"
         android:layout_alignParentStart="true"
         android:layout_marginHorizontal="24dp"
-        android:layout_marginStart="294dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginStart="162dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/button_bg"
         android:text="Book"
         android:textColor="@color/white" />
 
     <ListView
         android:id="@+id/listview"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_width="wrap_content"
+        android:layout_height="517dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="327dp"
-        android:layout_marginBottom="50dp" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="44dp"
+
+        android:layout_marginTop="318dp"
+        android:layout_marginEnd="44dp"
+
+        tools:itemCount="4"
+        tools:listheader="@layout/view_header"
+        tools:listitem="@layout/list_item"
+
+        />
 
 
 </RelativeLayout>
