--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,49 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
-        android:id="@+id/text_view_1"
+        android:id="@+id/txt_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_gravity="center"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="229dp"
-        android:layout_marginEnd="76dp"
-        android:gravity="center"
-        android:text="跳转页面(登录成功/注册)"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="20dp"
+        android:text="当前注册"
         android:textSize="20sp" />
 
     <RadioGroup
-        android:id="@+id/rdg_1"
-        android:layout_width="268dp"
+        android:id="@+id/rdg_user_checkin"
+        android:layout_width="258dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/text_view_1"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="105dp"
-        android:layout_marginTop="75dp"
-        android:layout_marginEnd="105dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal">
 
         <RadioButton
-            android:id="@+id/rbtn_1"
+            android:id="@+id/rbtn_delete"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Customer" />
+            android:text="Delete" />
 
         <RadioButton
-            android:id="@+id/rbtn_2"
-            android:layout_width="wrap_content"
+            android:id="@+id/rbtn_checkin"
+            android:layout_width="122dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Admin" />
+            android:text="Checkin" />
 
     </RadioGroup>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
