--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="229dp"
         android:layout_marginEnd="76dp"
         android:gravity="center"
-        android:text="跳转页面(登录成功/注册)"
+        android:text="Create your account now!"
         android:textSize="20sp" />
 
     <EditText
