--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -17,8 +17,11 @@
         android:layout_marginTop="52dp"
         android:layout_marginEnd="16dp"
         android:gravity="center"
+        android:color="@color/black"
         android:text="Create your store! Just enter the name, location, capacity, and type of service."
         android:textSize="20sp" />
+
+
 
     <EditText
         android:id="@+id/et_name"
